--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "firebase": "^8.6.2",
+    "font-awesome": "^4.7.0",
     "fuse.js": "^6.4.6",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
