--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
   "rules": {
     "no-var": "error",
     "no-shadow": "error",
-    "max-len": ["error", { "code": 120 }],
+    // "max-len": ["error", { "code": 120 }],
     "semi": ["error", "never"],
     "indent": ["error", "tab"],
     "comma-dangle": ["error", "never"],
