--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "storybook-react-router": "^1.0.8"
   },
   "eslintConfig": {
     "extends": [
