--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "2.0.0-beta.2"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.2.9",
