--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "update": "git pull && npm install",
     "git:add": "npm run lint:fix && git add *",
+    "dev": "netlify dev",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -12,7 +13,6 @@
     "clean": "rimraf build",
     "lint": "npx eslint \"src/**/*.{js,jsx,md}\"",
     "lint:fix": "eslint --fix \"src/**/*.{js,jsx,md}\"",
-    "dev": "netlify dev",
     "dev:sb": "start-storybook -p 6006 -s public",
     "build:sb": "build-storybook -s public"
   },
@@ -28,7 +28,7 @@
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
     "uuid": "^8.3.2",
-    "web-vitals": "2.0.0-beta.2"
+    "web-vitals": "1.1.2"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.2.9",
