--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "build:sb": "build-storybook -s public"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "firebase": "^8.6.3",
     "fuse.js": "^6.4.6",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-query": "^3.16.0",
+    "react-query-devtools": "^2.6.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
@@ -46,7 +49,7 @@
     "eslint": "^7.27.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "netlify-cli": "^3.31.16",
+    "netlify-cli": "^3.32.5",
     "rimraf": "^3.0.2",
     "storybook-react-router": "^1.0.8"
   },
