--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^6.2.0",
     "firebase": "^8.6.3",
     "fuse.js": "^6.4.6",
     "node-sass": "^6.0.0",
