--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "dotenv": "^10.0.0",
     "firebase": "^8.6.5",
     "fuse.js": "^6.4.6",
     "node-sass": "^6.0.0",
+    "querystringify": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
@@ -49,7 +49,7 @@
     "eslint": "^7.28.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "netlify-cli": "^3.34.0",
+    "netlify-cli": "^3.35.10",
     "rimraf": "^3.0.2",
     "storybook-react-router": "^1.0.8"
   },
