--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7",
+    "swiper": "^6.7.0",
     "uuid": "^8.3.2",
     "web-vitals": "2.0.1"
   },
