feat: refactor info modal

--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "axios": "^0.21.1",
     "firebase": "^8.6.7",
     "fuse.js": "^6.4.6",
+    "localforage": "^1.9.0",
     "node-sass": "^6.0.0",
-    "querystringify": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-query": "^3.17.0",
+    "react-query": "^3.17.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
@@ -50,7 +50,7 @@
     "eslint": "^7.28.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "netlify-cli": "^3.37.23",
+    "netlify-cli": "^3.37.36",
     "rimraf": "^3.0.2",
     "storybook-react-router": "^1.0.8"
   },
